kubernetes/apps/seerr/seerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: default
spec:
  selector:
    app: seerr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055
